      bind parameter.  not much changes here except their labels now look 
      like ":param_1", ":param_2" instead of ":literal"
      
    - column labels in the form "tablename.columname", i.e. with a dot, are now
      supported.
      
    - from_obj keyword argument to select() can be a scalar or a list.
    
- orm

   - new synonym() behavior: an attribute will be placed on the mapped
     class, if one does not exist already, in all cases. if a property
     already exists on the class, the synonym will decorate the property
     with the appropriate comparison operators so that it can be used in in
     column expressions just like any other mapped attribute (i.e. usable in
     filter(), etc.) the "proxy=True" flag is deprecated and no longer means
     anything. Additionally, the flag "map_column=True" will automatically
     generate a ColumnProperty corresponding to the name of the synonym,
     i.e.: 'somename':synonym('_somename', map_column=True) will map the
     column named 'somename' to the attribute '_somename'. See the example
     in the mapper docs. [ticket:801]

   - added support for version_id_col in conjunction with inheriting mappers.
     version_id_col is typically set on the base mapper in an inheritance
     relationship where it takes effect for all inheriting mappers. 
     [ticket:883]
   
   - relaxed rules on column_property() expressions having labels; any
     ColumnElement is accepted now, as the compiler auto-labels non-labeled
     ColumnElements now.  a selectable, like a select() statement, still
     requires conversion to ColumnElement via as_scalar() or label().

   - fixed backref bug where you could not del instance.attr if attr
     was None
     
   - several ORM attributes have been removed or made private:
     mapper.get_attr_by_column(), mapper.set_attr_by_column(), 
     mapper.pks_by_table, mapper.cascade_callable(), 
     MapperProperty.cascade_callable(), mapper.canload(),